# clash-farmer

./: .gitignore  README.md  config.yaml  main.py  metrics.py  pyproject.toml  rebind.ahk  recovery.py  requirements.txt
attack/: deploy.py  search.py
bot/: telegram.py
input/: adb.py
makcu/: __init__.py  connection.py  controller.py  errors.py  mouse.py
planner/: export.py  gemini.py  schemas.py  visual_pilot.py
planner/data/: army.json  defenses.json  mapping.json  priority.json  resources.json  th.json  traps.json
screen/: capture.py  ocr.py  rois.json  state.py  templates.py
tools/: agent_capture.py  auto_capture.py  auto_extract.py  calibrate.py  capture_attack.py  capture_battle.py  capture_surrender.py  capture_v2.py  test_planner.py  verify_templates.py
upgrade/: execute.py  lab.py  suggest.py  walls.py
